parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    Empty
    True
    EQUAL
    False

Grammar

Rule 0     S' -> program
Rule 1     program -> program compound_action actions
Rule 2     program -> compound_action actions
Rule 3     program -> program actions
Rule 4     program -> actions
Rule 5     program -> error
Rule 6     actions -> actions action
Rule 7     actions -> action
Rule 8     action -> Auth STRING STRING NEWLINE
Rule 9     action -> movement BOOL NEWLINE
Rule 10    action -> movement NEWLINE
Rule 11    action -> movement target STRING BOOL NEWLINE
Rule 12    action -> movement target STRING NEWLINE
Rule 13    action -> movement target BOOL NEWLINE
Rule 14    action -> movement target NEWLINE
Rule 15    action -> movement STRING NEWLINE
Rule 16    action -> Judge target NUMBER NEWLINE
Rule 17    action -> Judge target STRING NEWLINE
Rule 18    action -> Judge target Not NUMBER NEWLINE
Rule 19    action -> Judge target Not STRING NEWLINE
Rule 20    action -> NEWLINE
Rule 21    action -> error NEWLINE
Rule 22    movement -> Perfer
Rule 23    movement -> Patient
Rule 24    movement -> Visit
Rule 25    movement -> Blind
Rule 26    movement -> Click
Rule 27    movement -> Input
Rule 28    movement -> Choose
Rule 29    movement -> Back
Rule 30    movement -> Forward
Rule 31    movement -> Accept
Rule 32    movement -> Auth
Rule 33    movement -> Dismiss
Rule 34    movement -> Press
Rule 35    movement -> Switch
Rule 36    movement -> error
Rule 37    compound_action -> repeat_block
Rule 38    compound_action -> task_block
Rule 39    repeat_block -> Repeat NUMBER NEWLINE actions End NEWLINE
Rule 40    repeat_block -> Repeat NUMBER NEWLINE compound_action End NEWLINE
Rule 41    task_block -> Task ID NEWLINE actions End
Rule 42    task_block -> Task ID NEWLINE compound_action End
Rule 43    target -> STRING STRING
Rule 44    target -> STRING

Terminals, with rules where they appear

Accept               : 31
Auth                 : 8 32
BOOL                 : 9 11 13
Back                 : 29
Blind                : 25
Choose               : 28
Click                : 26
Dismiss              : 33
EQUAL                : 
Empty                : 
End                  : 39 40 41 42
False                : 
Forward              : 30
ID                   : 41 42
Input                : 27
Judge                : 16 17 18 19
NEWLINE              : 8 9 10 11 12 13 14 15 16 17 18 19 20 21 39 39 40 40 41 42
NUMBER               : 16 18 39 40
Not                  : 18 19
Patient              : 23
Perfer               : 22
Press                : 34
Repeat               : 39 40
STRING               : 8 8 11 12 15 17 19 43 43 44
Switch               : 35
Task                 : 41 42
True                 : 
Visit                : 24
error                : 5 21 36

Nonterminals, with rules where they appear

action               : 6 7
actions              : 1 2 3 4 6 39 41
compound_action      : 1 2 40 42
movement             : 9 10 11 12 13 14 15
program              : 1 3 0
repeat_block         : 37
target               : 11 12 13 14 16 17 18 19
task_block           : 38

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program compound_action actions
    (2) program -> . compound_action actions
    (3) program -> . program actions
    (4) program -> . actions
    (5) program -> . error
    (37) compound_action -> . repeat_block
    (38) compound_action -> . task_block
    (6) actions -> . actions action
    (7) actions -> . action
    (39) repeat_block -> . Repeat NUMBER NEWLINE actions End NEWLINE
    (40) repeat_block -> . Repeat NUMBER NEWLINE compound_action End NEWLINE
    (41) task_block -> . Task ID NEWLINE actions End
    (42) task_block -> . Task ID NEWLINE compound_action End
    (8) action -> . Auth STRING STRING NEWLINE
    (9) action -> . movement BOOL NEWLINE
    (10) action -> . movement NEWLINE
    (11) action -> . movement target STRING BOOL NEWLINE
    (12) action -> . movement target STRING NEWLINE
    (13) action -> . movement target BOOL NEWLINE
    (14) action -> . movement target NEWLINE
    (15) action -> . movement STRING NEWLINE
    (16) action -> . Judge target NUMBER NEWLINE
    (17) action -> . Judge target STRING NEWLINE
    (18) action -> . Judge target Not NUMBER NEWLINE
    (19) action -> . Judge target Not STRING NEWLINE
    (20) action -> . NEWLINE
    (21) action -> . error NEWLINE
    (22) movement -> . Perfer
    (23) movement -> . Patient
    (24) movement -> . Visit
    (25) movement -> . Blind
    (26) movement -> . Click
    (27) movement -> . Input
    (28) movement -> . Choose
    (29) movement -> . Back
    (30) movement -> . Forward
    (31) movement -> . Accept
    (32) movement -> . Auth
    (33) movement -> . Dismiss
    (34) movement -> . Press
    (35) movement -> . Switch
    (36) movement -> . error

    error           shift and go to state 24
    Repeat          shift and go to state 9
    Task            shift and go to state 16
    Auth            shift and go to state 12
    Judge           shift and go to state 17
    NEWLINE         shift and go to state 11
    Perfer          shift and go to state 2
    Patient         shift and go to state 10
    Visit           shift and go to state 4
    Blind           shift and go to state 19
    Click           shift and go to state 26
    Input           shift and go to state 8
    Choose          shift and go to state 6
    Back            shift and go to state 22
    Forward         shift and go to state 7
    Accept          shift and go to state 23
    Dismiss         shift and go to state 20
    Press           shift and go to state 13
    Switch          shift and go to state 18

    task_block                     shift and go to state 1
    repeat_block                   shift and go to state 21
    compound_action                shift and go to state 3
    actions                        shift and go to state 5
    program                        shift and go to state 14
    action                         shift and go to state 25
    movement                       shift and go to state 15

state 1

    (38) compound_action -> task_block .

    End             reduce using rule 38 (compound_action -> task_block .)
    Auth            reduce using rule 38 (compound_action -> task_block .)
    Judge           reduce using rule 38 (compound_action -> task_block .)
    NEWLINE         reduce using rule 38 (compound_action -> task_block .)
    error           reduce using rule 38 (compound_action -> task_block .)
    Perfer          reduce using rule 38 (compound_action -> task_block .)
    Patient         reduce using rule 38 (compound_action -> task_block .)
    Visit           reduce using rule 38 (compound_action -> task_block .)
    Blind           reduce using rule 38 (compound_action -> task_block .)
    Click           reduce using rule 38 (compound_action -> task_block .)
    Input           reduce using rule 38 (compound_action -> task_block .)
    Choose          reduce using rule 38 (compound_action -> task_block .)
    Back            reduce using rule 38 (compound_action -> task_block .)
    Forward         reduce using rule 38 (compound_action -> task_block .)
    Accept          reduce using rule 38 (compound_action -> task_block .)
    Dismiss         reduce using rule 38 (compound_action -> task_block .)
    Press           reduce using rule 38 (compound_action -> task_block .)
    Switch          reduce using rule 38 (compound_action -> task_block .)


state 2

    (22) movement -> Perfer .

    BOOL            reduce using rule 22 (movement -> Perfer .)
    NEWLINE         reduce using rule 22 (movement -> Perfer .)
    STRING          reduce using rule 22 (movement -> Perfer .)


state 3

    (2) program -> compound_action . actions
    (6) actions -> . actions action
    (7) actions -> . action
    (8) action -> . Auth STRING STRING NEWLINE
    (9) action -> . movement BOOL NEWLINE
    (10) action -> . movement NEWLINE
    (11) action -> . movement target STRING BOOL NEWLINE
    (12) action -> . movement target STRING NEWLINE
    (13) action -> . movement target BOOL NEWLINE
    (14) action -> . movement target NEWLINE
    (15) action -> . movement STRING NEWLINE
    (16) action -> . Judge target NUMBER NEWLINE
    (17) action -> . Judge target STRING NEWLINE
    (18) action -> . Judge target Not NUMBER NEWLINE
    (19) action -> . Judge target Not STRING NEWLINE
    (20) action -> . NEWLINE
    (21) action -> . error NEWLINE
    (22) movement -> . Perfer
    (23) movement -> . Patient
    (24) movement -> . Visit
    (25) movement -> . Blind
    (26) movement -> . Click
    (27) movement -> . Input
    (28) movement -> . Choose
    (29) movement -> . Back
    (30) movement -> . Forward
    (31) movement -> . Accept
    (32) movement -> . Auth
    (33) movement -> . Dismiss
    (34) movement -> . Press
    (35) movement -> . Switch
    (36) movement -> . error

    Auth            shift and go to state 12
    Judge           shift and go to state 17
    NEWLINE         shift and go to state 11
    error           shift and go to state 28
    Perfer          shift and go to state 2
    Patient         shift and go to state 10
    Visit           shift and go to state 4
    Blind           shift and go to state 19
    Click           shift and go to state 26
    Input           shift and go to state 8
    Choose          shift and go to state 6
    Back            shift and go to state 22
    Forward         shift and go to state 7
    Accept          shift and go to state 23
    Dismiss         shift and go to state 20
    Press           shift and go to state 13
    Switch          shift and go to state 18

    action                         shift and go to state 25
    actions                        shift and go to state 27
    movement                       shift and go to state 15

state 4

    (24) movement -> Visit .

    BOOL            reduce using rule 24 (movement -> Visit .)
    NEWLINE         reduce using rule 24 (movement -> Visit .)
    STRING          reduce using rule 24 (movement -> Visit .)


state 5

    (4) program -> actions .
    (6) actions -> actions . action
    (8) action -> . Auth STRING STRING NEWLINE
    (9) action -> . movement BOOL NEWLINE
    (10) action -> . movement NEWLINE
    (11) action -> . movement target STRING BOOL NEWLINE
    (12) action -> . movement target STRING NEWLINE
    (13) action -> . movement target BOOL NEWLINE
    (14) action -> . movement target NEWLINE
    (15) action -> . movement STRING NEWLINE
    (16) action -> . Judge target NUMBER NEWLINE
    (17) action -> . Judge target STRING NEWLINE
    (18) action -> . Judge target Not NUMBER NEWLINE
    (19) action -> . Judge target Not STRING NEWLINE
    (20) action -> . NEWLINE
    (21) action -> . error NEWLINE
    (22) movement -> . Perfer
    (23) movement -> . Patient
    (24) movement -> . Visit
    (25) movement -> . Blind
    (26) movement -> . Click
    (27) movement -> . Input
    (28) movement -> . Choose
    (29) movement -> . Back
    (30) movement -> . Forward
    (31) movement -> . Accept
    (32) movement -> . Auth
    (33) movement -> . Dismiss
    (34) movement -> . Press
    (35) movement -> . Switch
    (36) movement -> . error

  ! shift/reduce conflict for Auth resolved as shift
  ! shift/reduce conflict for Judge resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for error resolved as shift
  ! shift/reduce conflict for Perfer resolved as shift
  ! shift/reduce conflict for Patient resolved as shift
  ! shift/reduce conflict for Visit resolved as shift
  ! shift/reduce conflict for Blind resolved as shift
  ! shift/reduce conflict for Click resolved as shift
  ! shift/reduce conflict for Input resolved as shift
  ! shift/reduce conflict for Choose resolved as shift
  ! shift/reduce conflict for Back resolved as shift
  ! shift/reduce conflict for Forward resolved as shift
  ! shift/reduce conflict for Accept resolved as shift
  ! shift/reduce conflict for Dismiss resolved as shift
  ! shift/reduce conflict for Press resolved as shift
  ! shift/reduce conflict for Switch resolved as shift
    Repeat          reduce using rule 4 (program -> actions .)
    Task            reduce using rule 4 (program -> actions .)
    $end            reduce using rule 4 (program -> actions .)
    Auth            shift and go to state 12
    Judge           shift and go to state 17
    NEWLINE         shift and go to state 11
    error           shift and go to state 28
    Perfer          shift and go to state 2
    Patient         shift and go to state 10
    Visit           shift and go to state 4
    Blind           shift and go to state 19
    Click           shift and go to state 26
    Input           shift and go to state 8
    Choose          shift and go to state 6
    Back            shift and go to state 22
    Forward         shift and go to state 7
    Accept          shift and go to state 23
    Dismiss         shift and go to state 20
    Press           shift and go to state 13
    Switch          shift and go to state 18

  ! Auth            [ reduce using rule 4 (program -> actions .) ]
  ! Judge           [ reduce using rule 4 (program -> actions .) ]
  ! NEWLINE         [ reduce using rule 4 (program -> actions .) ]
  ! error           [ reduce using rule 4 (program -> actions .) ]
  ! Perfer          [ reduce using rule 4 (program -> actions .) ]
  ! Patient         [ reduce using rule 4 (program -> actions .) ]
  ! Visit           [ reduce using rule 4 (program -> actions .) ]
  ! Blind           [ reduce using rule 4 (program -> actions .) ]
  ! Click           [ reduce using rule 4 (program -> actions .) ]
  ! Input           [ reduce using rule 4 (program -> actions .) ]
  ! Choose          [ reduce using rule 4 (program -> actions .) ]
  ! Back            [ reduce using rule 4 (program -> actions .) ]
  ! Forward         [ reduce using rule 4 (program -> actions .) ]
  ! Accept          [ reduce using rule 4 (program -> actions .) ]
  ! Dismiss         [ reduce using rule 4 (program -> actions .) ]
  ! Press           [ reduce using rule 4 (program -> actions .) ]
  ! Switch          [ reduce using rule 4 (program -> actions .) ]

    action                         shift and go to state 29
    movement                       shift and go to state 15

state 6

    (28) movement -> Choose .

    BOOL            reduce using rule 28 (movement -> Choose .)
    NEWLINE         reduce using rule 28 (movement -> Choose .)
    STRING          reduce using rule 28 (movement -> Choose .)


state 7

    (30) movement -> Forward .

    BOOL            reduce using rule 30 (movement -> Forward .)
    NEWLINE         reduce using rule 30 (movement -> Forward .)
    STRING          reduce using rule 30 (movement -> Forward .)


state 8

    (27) movement -> Input .

    BOOL            reduce using rule 27 (movement -> Input .)
    NEWLINE         reduce using rule 27 (movement -> Input .)
    STRING          reduce using rule 27 (movement -> Input .)


state 9

    (39) repeat_block -> Repeat . NUMBER NEWLINE actions End NEWLINE
    (40) repeat_block -> Repeat . NUMBER NEWLINE compound_action End NEWLINE

    NUMBER          shift and go to state 30


state 10

    (23) movement -> Patient .

    BOOL            reduce using rule 23 (movement -> Patient .)
    NEWLINE         reduce using rule 23 (movement -> Patient .)
    STRING          reduce using rule 23 (movement -> Patient .)


state 11

    (20) action -> NEWLINE .

    End             reduce using rule 20 (action -> NEWLINE .)
    Auth            reduce using rule 20 (action -> NEWLINE .)
    Judge           reduce using rule 20 (action -> NEWLINE .)
    NEWLINE         reduce using rule 20 (action -> NEWLINE .)
    error           reduce using rule 20 (action -> NEWLINE .)
    Perfer          reduce using rule 20 (action -> NEWLINE .)
    Patient         reduce using rule 20 (action -> NEWLINE .)
    Visit           reduce using rule 20 (action -> NEWLINE .)
    Blind           reduce using rule 20 (action -> NEWLINE .)
    Click           reduce using rule 20 (action -> NEWLINE .)
    Input           reduce using rule 20 (action -> NEWLINE .)
    Choose          reduce using rule 20 (action -> NEWLINE .)
    Back            reduce using rule 20 (action -> NEWLINE .)
    Forward         reduce using rule 20 (action -> NEWLINE .)
    Accept          reduce using rule 20 (action -> NEWLINE .)
    Dismiss         reduce using rule 20 (action -> NEWLINE .)
    Press           reduce using rule 20 (action -> NEWLINE .)
    Switch          reduce using rule 20 (action -> NEWLINE .)
    Repeat          reduce using rule 20 (action -> NEWLINE .)
    Task            reduce using rule 20 (action -> NEWLINE .)
    $end            reduce using rule 20 (action -> NEWLINE .)


state 12

    (8) action -> Auth . STRING STRING NEWLINE
    (32) movement -> Auth .

  ! shift/reduce conflict for STRING resolved as shift
    STRING          shift and go to state 31
    BOOL            reduce using rule 32 (movement -> Auth .)
    NEWLINE         reduce using rule 32 (movement -> Auth .)

  ! STRING          [ reduce using rule 32 (movement -> Auth .) ]


state 13

    (34) movement -> Press .

    BOOL            reduce using rule 34 (movement -> Press .)
    NEWLINE         reduce using rule 34 (movement -> Press .)
    STRING          reduce using rule 34 (movement -> Press .)


state 14

    (0) S' -> program .
    (1) program -> program . compound_action actions
    (3) program -> program . actions
    (37) compound_action -> . repeat_block
    (38) compound_action -> . task_block
    (6) actions -> . actions action
    (7) actions -> . action
    (39) repeat_block -> . Repeat NUMBER NEWLINE actions End NEWLINE
    (40) repeat_block -> . Repeat NUMBER NEWLINE compound_action End NEWLINE
    (41) task_block -> . Task ID NEWLINE actions End
    (42) task_block -> . Task ID NEWLINE compound_action End
    (8) action -> . Auth STRING STRING NEWLINE
    (9) action -> . movement BOOL NEWLINE
    (10) action -> . movement NEWLINE
    (11) action -> . movement target STRING BOOL NEWLINE
    (12) action -> . movement target STRING NEWLINE
    (13) action -> . movement target BOOL NEWLINE
    (14) action -> . movement target NEWLINE
    (15) action -> . movement STRING NEWLINE
    (16) action -> . Judge target NUMBER NEWLINE
    (17) action -> . Judge target STRING NEWLINE
    (18) action -> . Judge target Not NUMBER NEWLINE
    (19) action -> . Judge target Not STRING NEWLINE
    (20) action -> . NEWLINE
    (21) action -> . error NEWLINE
    (22) movement -> . Perfer
    (23) movement -> . Patient
    (24) movement -> . Visit
    (25) movement -> . Blind
    (26) movement -> . Click
    (27) movement -> . Input
    (28) movement -> . Choose
    (29) movement -> . Back
    (30) movement -> . Forward
    (31) movement -> . Accept
    (32) movement -> . Auth
    (33) movement -> . Dismiss
    (34) movement -> . Press
    (35) movement -> . Switch
    (36) movement -> . error

    Repeat          shift and go to state 9
    Task            shift and go to state 16
    Auth            shift and go to state 12
    Judge           shift and go to state 17
    NEWLINE         shift and go to state 11
    error           shift and go to state 28
    Perfer          shift and go to state 2
    Patient         shift and go to state 10
    Visit           shift and go to state 4
    Blind           shift and go to state 19
    Click           shift and go to state 26
    Input           shift and go to state 8
    Choose          shift and go to state 6
    Back            shift and go to state 22
    Forward         shift and go to state 7
    Accept          shift and go to state 23
    Dismiss         shift and go to state 20
    Press           shift and go to state 13
    Switch          shift and go to state 18

    task_block                     shift and go to state 1
    repeat_block                   shift and go to state 21
    compound_action                shift and go to state 32
    actions                        shift and go to state 33
    action                         shift and go to state 25
    movement                       shift and go to state 15

state 15

    (9) action -> movement . BOOL NEWLINE
    (10) action -> movement . NEWLINE
    (11) action -> movement . target STRING BOOL NEWLINE
    (12) action -> movement . target STRING NEWLINE
    (13) action -> movement . target BOOL NEWLINE
    (14) action -> movement . target NEWLINE
    (15) action -> movement . STRING NEWLINE
    (43) target -> . STRING STRING
    (44) target -> . STRING

    BOOL            shift and go to state 36
    NEWLINE         shift and go to state 35
    STRING          shift and go to state 34

    target                         shift and go to state 37

state 16

    (41) task_block -> Task . ID NEWLINE actions End
    (42) task_block -> Task . ID NEWLINE compound_action End

    ID              shift and go to state 38


state 17

    (16) action -> Judge . target NUMBER NEWLINE
    (17) action -> Judge . target STRING NEWLINE
    (18) action -> Judge . target Not NUMBER NEWLINE
    (19) action -> Judge . target Not STRING NEWLINE
    (43) target -> . STRING STRING
    (44) target -> . STRING

    STRING          shift and go to state 39

    target                         shift and go to state 40

state 18

    (35) movement -> Switch .

    BOOL            reduce using rule 35 (movement -> Switch .)
    NEWLINE         reduce using rule 35 (movement -> Switch .)
    STRING          reduce using rule 35 (movement -> Switch .)


state 19

    (25) movement -> Blind .

    BOOL            reduce using rule 25 (movement -> Blind .)
    NEWLINE         reduce using rule 25 (movement -> Blind .)
    STRING          reduce using rule 25 (movement -> Blind .)


state 20

    (33) movement -> Dismiss .

    BOOL            reduce using rule 33 (movement -> Dismiss .)
    NEWLINE         reduce using rule 33 (movement -> Dismiss .)
    STRING          reduce using rule 33 (movement -> Dismiss .)


state 21

    (37) compound_action -> repeat_block .

    End             reduce using rule 37 (compound_action -> repeat_block .)
    Auth            reduce using rule 37 (compound_action -> repeat_block .)
    Judge           reduce using rule 37 (compound_action -> repeat_block .)
    NEWLINE         reduce using rule 37 (compound_action -> repeat_block .)
    error           reduce using rule 37 (compound_action -> repeat_block .)
    Perfer          reduce using rule 37 (compound_action -> repeat_block .)
    Patient         reduce using rule 37 (compound_action -> repeat_block .)
    Visit           reduce using rule 37 (compound_action -> repeat_block .)
    Blind           reduce using rule 37 (compound_action -> repeat_block .)
    Click           reduce using rule 37 (compound_action -> repeat_block .)
    Input           reduce using rule 37 (compound_action -> repeat_block .)
    Choose          reduce using rule 37 (compound_action -> repeat_block .)
    Back            reduce using rule 37 (compound_action -> repeat_block .)
    Forward         reduce using rule 37 (compound_action -> repeat_block .)
    Accept          reduce using rule 37 (compound_action -> repeat_block .)
    Dismiss         reduce using rule 37 (compound_action -> repeat_block .)
    Press           reduce using rule 37 (compound_action -> repeat_block .)
    Switch          reduce using rule 37 (compound_action -> repeat_block .)


state 22

    (29) movement -> Back .

    BOOL            reduce using rule 29 (movement -> Back .)
    NEWLINE         reduce using rule 29 (movement -> Back .)
    STRING          reduce using rule 29 (movement -> Back .)


state 23

    (31) movement -> Accept .

    BOOL            reduce using rule 31 (movement -> Accept .)
    NEWLINE         reduce using rule 31 (movement -> Accept .)
    STRING          reduce using rule 31 (movement -> Accept .)


state 24

    (5) program -> error .
    (21) action -> error . NEWLINE
    (36) movement -> error .

  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
    Repeat          reduce using rule 5 (program -> error .)
    Task            reduce using rule 5 (program -> error .)
    Auth            reduce using rule 5 (program -> error .)
    Judge           reduce using rule 5 (program -> error .)
    error           reduce using rule 5 (program -> error .)
    Perfer          reduce using rule 5 (program -> error .)
    Patient         reduce using rule 5 (program -> error .)
    Visit           reduce using rule 5 (program -> error .)
    Blind           reduce using rule 5 (program -> error .)
    Click           reduce using rule 5 (program -> error .)
    Input           reduce using rule 5 (program -> error .)
    Choose          reduce using rule 5 (program -> error .)
    Back            reduce using rule 5 (program -> error .)
    Forward         reduce using rule 5 (program -> error .)
    Accept          reduce using rule 5 (program -> error .)
    Dismiss         reduce using rule 5 (program -> error .)
    Press           reduce using rule 5 (program -> error .)
    Switch          reduce using rule 5 (program -> error .)
    $end            reduce using rule 5 (program -> error .)
    NEWLINE         shift and go to state 41
    BOOL            reduce using rule 36 (movement -> error .)
    STRING          reduce using rule 36 (movement -> error .)

  ! NEWLINE         [ reduce using rule 5 (program -> error .) ]
  ! NEWLINE         [ reduce using rule 36 (movement -> error .) ]


state 25

    (7) actions -> action .

    Auth            reduce using rule 7 (actions -> action .)
    Judge           reduce using rule 7 (actions -> action .)
    NEWLINE         reduce using rule 7 (actions -> action .)
    error           reduce using rule 7 (actions -> action .)
    Perfer          reduce using rule 7 (actions -> action .)
    Patient         reduce using rule 7 (actions -> action .)
    Visit           reduce using rule 7 (actions -> action .)
    Blind           reduce using rule 7 (actions -> action .)
    Click           reduce using rule 7 (actions -> action .)
    Input           reduce using rule 7 (actions -> action .)
    Choose          reduce using rule 7 (actions -> action .)
    Back            reduce using rule 7 (actions -> action .)
    Forward         reduce using rule 7 (actions -> action .)
    Accept          reduce using rule 7 (actions -> action .)
    Dismiss         reduce using rule 7 (actions -> action .)
    Press           reduce using rule 7 (actions -> action .)
    Switch          reduce using rule 7 (actions -> action .)
    Repeat          reduce using rule 7 (actions -> action .)
    Task            reduce using rule 7 (actions -> action .)
    $end            reduce using rule 7 (actions -> action .)
    End             reduce using rule 7 (actions -> action .)


state 26

    (26) movement -> Click .

    BOOL            reduce using rule 26 (movement -> Click .)
    NEWLINE         reduce using rule 26 (movement -> Click .)
    STRING          reduce using rule 26 (movement -> Click .)


state 27

    (2) program -> compound_action actions .
    (6) actions -> actions . action
    (8) action -> . Auth STRING STRING NEWLINE
    (9) action -> . movement BOOL NEWLINE
    (10) action -> . movement NEWLINE
    (11) action -> . movement target STRING BOOL NEWLINE
    (12) action -> . movement target STRING NEWLINE
    (13) action -> . movement target BOOL NEWLINE
    (14) action -> . movement target NEWLINE
    (15) action -> . movement STRING NEWLINE
    (16) action -> . Judge target NUMBER NEWLINE
    (17) action -> . Judge target STRING NEWLINE
    (18) action -> . Judge target Not NUMBER NEWLINE
    (19) action -> . Judge target Not STRING NEWLINE
    (20) action -> . NEWLINE
    (21) action -> . error NEWLINE
    (22) movement -> . Perfer
    (23) movement -> . Patient
    (24) movement -> . Visit
    (25) movement -> . Blind
    (26) movement -> . Click
    (27) movement -> . Input
    (28) movement -> . Choose
    (29) movement -> . Back
    (30) movement -> . Forward
    (31) movement -> . Accept
    (32) movement -> . Auth
    (33) movement -> . Dismiss
    (34) movement -> . Press
    (35) movement -> . Switch
    (36) movement -> . error

  ! shift/reduce conflict for Auth resolved as shift
  ! shift/reduce conflict for Judge resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for error resolved as shift
  ! shift/reduce conflict for Perfer resolved as shift
  ! shift/reduce conflict for Patient resolved as shift
  ! shift/reduce conflict for Visit resolved as shift
  ! shift/reduce conflict for Blind resolved as shift
  ! shift/reduce conflict for Click resolved as shift
  ! shift/reduce conflict for Input resolved as shift
  ! shift/reduce conflict for Choose resolved as shift
  ! shift/reduce conflict for Back resolved as shift
  ! shift/reduce conflict for Forward resolved as shift
  ! shift/reduce conflict for Accept resolved as shift
  ! shift/reduce conflict for Dismiss resolved as shift
  ! shift/reduce conflict for Press resolved as shift
  ! shift/reduce conflict for Switch resolved as shift
    Repeat          reduce using rule 2 (program -> compound_action actions .)
    Task            reduce using rule 2 (program -> compound_action actions .)
    $end            reduce using rule 2 (program -> compound_action actions .)
    Auth            shift and go to state 12
    Judge           shift and go to state 17
    NEWLINE         shift and go to state 11
    error           shift and go to state 28
    Perfer          shift and go to state 2
    Patient         shift and go to state 10
    Visit           shift and go to state 4
    Blind           shift and go to state 19
    Click           shift and go to state 26
    Input           shift and go to state 8
    Choose          shift and go to state 6
    Back            shift and go to state 22
    Forward         shift and go to state 7
    Accept          shift and go to state 23
    Dismiss         shift and go to state 20
    Press           shift and go to state 13
    Switch          shift and go to state 18

  ! Auth            [ reduce using rule 2 (program -> compound_action actions .) ]
  ! Judge           [ reduce using rule 2 (program -> compound_action actions .) ]
  ! NEWLINE         [ reduce using rule 2 (program -> compound_action actions .) ]
  ! error           [ reduce using rule 2 (program -> compound_action actions .) ]
  ! Perfer          [ reduce using rule 2 (program -> compound_action actions .) ]
  ! Patient         [ reduce using rule 2 (program -> compound_action actions .) ]
  ! Visit           [ reduce using rule 2 (program -> compound_action actions .) ]
  ! Blind           [ reduce using rule 2 (program -> compound_action actions .) ]
  ! Click           [ reduce using rule 2 (program -> compound_action actions .) ]
  ! Input           [ reduce using rule 2 (program -> compound_action actions .) ]
  ! Choose          [ reduce using rule 2 (program -> compound_action actions .) ]
  ! Back            [ reduce using rule 2 (program -> compound_action actions .) ]
  ! Forward         [ reduce using rule 2 (program -> compound_action actions .) ]
  ! Accept          [ reduce using rule 2 (program -> compound_action actions .) ]
  ! Dismiss         [ reduce using rule 2 (program -> compound_action actions .) ]
  ! Press           [ reduce using rule 2 (program -> compound_action actions .) ]
  ! Switch          [ reduce using rule 2 (program -> compound_action actions .) ]

    action                         shift and go to state 29
    movement                       shift and go to state 15

state 28

    (21) action -> error . NEWLINE
    (36) movement -> error .

  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 41
    BOOL            reduce using rule 36 (movement -> error .)
    STRING          reduce using rule 36 (movement -> error .)

  ! NEWLINE         [ reduce using rule 36 (movement -> error .) ]


state 29

    (6) actions -> actions action .

    Auth            reduce using rule 6 (actions -> actions action .)
    Judge           reduce using rule 6 (actions -> actions action .)
    NEWLINE         reduce using rule 6 (actions -> actions action .)
    error           reduce using rule 6 (actions -> actions action .)
    Perfer          reduce using rule 6 (actions -> actions action .)
    Patient         reduce using rule 6 (actions -> actions action .)
    Visit           reduce using rule 6 (actions -> actions action .)
    Blind           reduce using rule 6 (actions -> actions action .)
    Click           reduce using rule 6 (actions -> actions action .)
    Input           reduce using rule 6 (actions -> actions action .)
    Choose          reduce using rule 6 (actions -> actions action .)
    Back            reduce using rule 6 (actions -> actions action .)
    Forward         reduce using rule 6 (actions -> actions action .)
    Accept          reduce using rule 6 (actions -> actions action .)
    Dismiss         reduce using rule 6 (actions -> actions action .)
    Press           reduce using rule 6 (actions -> actions action .)
    Switch          reduce using rule 6 (actions -> actions action .)
    Repeat          reduce using rule 6 (actions -> actions action .)
    Task            reduce using rule 6 (actions -> actions action .)
    $end            reduce using rule 6 (actions -> actions action .)
    End             reduce using rule 6 (actions -> actions action .)


state 30

    (39) repeat_block -> Repeat NUMBER . NEWLINE actions End NEWLINE
    (40) repeat_block -> Repeat NUMBER . NEWLINE compound_action End NEWLINE

    NEWLINE         shift and go to state 42


state 31

    (8) action -> Auth STRING . STRING NEWLINE

    STRING          shift and go to state 43


state 32

    (1) program -> program compound_action . actions
    (6) actions -> . actions action
    (7) actions -> . action
    (8) action -> . Auth STRING STRING NEWLINE
    (9) action -> . movement BOOL NEWLINE
    (10) action -> . movement NEWLINE
    (11) action -> . movement target STRING BOOL NEWLINE
    (12) action -> . movement target STRING NEWLINE
    (13) action -> . movement target BOOL NEWLINE
    (14) action -> . movement target NEWLINE
    (15) action -> . movement STRING NEWLINE
    (16) action -> . Judge target NUMBER NEWLINE
    (17) action -> . Judge target STRING NEWLINE
    (18) action -> . Judge target Not NUMBER NEWLINE
    (19) action -> . Judge target Not STRING NEWLINE
    (20) action -> . NEWLINE
    (21) action -> . error NEWLINE
    (22) movement -> . Perfer
    (23) movement -> . Patient
    (24) movement -> . Visit
    (25) movement -> . Blind
    (26) movement -> . Click
    (27) movement -> . Input
    (28) movement -> . Choose
    (29) movement -> . Back
    (30) movement -> . Forward
    (31) movement -> . Accept
    (32) movement -> . Auth
    (33) movement -> . Dismiss
    (34) movement -> . Press
    (35) movement -> . Switch
    (36) movement -> . error

    Auth            shift and go to state 12
    Judge           shift and go to state 17
    NEWLINE         shift and go to state 11
    error           shift and go to state 28
    Perfer          shift and go to state 2
    Patient         shift and go to state 10
    Visit           shift and go to state 4
    Blind           shift and go to state 19
    Click           shift and go to state 26
    Input           shift and go to state 8
    Choose          shift and go to state 6
    Back            shift and go to state 22
    Forward         shift and go to state 7
    Accept          shift and go to state 23
    Dismiss         shift and go to state 20
    Press           shift and go to state 13
    Switch          shift and go to state 18

    actions                        shift and go to state 44
    action                         shift and go to state 25
    movement                       shift and go to state 15

state 33
